fix: not using @import
It was causing css files to become too large. It was not possible
to deploy.

--- a/src/app/components/video-background/video-background.component.scss
+++ b/src/app/components/video-background/video-background.component.scss
@@ -1,5 +1,3 @@
-@import '../../../styles.scss';
-
 .video-bg {
   position: relative;
 
@@ -8,7 +6,9 @@
     top: 0;
     left: 0;
     z-index: 1;
-    @include use-all-surface();
+    width: 100%;
+    height: 100%;
+    // @include use-all-surface();
   }
 
   &-movie {
@@ -16,12 +16,16 @@
     top: 0;
     left: 0;
     z-index: 0;
-    @include use-all-surface();
+    width: 100%;
+    height: 100%;
+    // @include use-all-surface();
 
     video,
     img {
       object-fit: cover;
-      @include use-all-surface();
+      width: 100%;
+      height: 100%;
+      // @include use-all-surface();
     }
   }
 }
